Fixed bug of Tabs overlapping the logged user

--- a/app/pages/profile/profile.scss
+++ b/app/pages/profile/profile.scss
@@ -1,3 +1,8 @@
 .profile {
 
+  .content {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+  }
 }
